feat: add deleting existing product (admin)
